Рефакторинг полей
